ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: apps
  annotations:
  # Required for websockets in Nginx Ingress
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
        }
spec:
  tls:
    - hosts:
      - elixirapi.me
      - chess.elixirapi.me
      - chat.elixirapi.me
      - issueboard.elixirapi.me
      secretName: elixirapi
  ingressClassName: nginx
  rules:
  - host: elixirapi.me
    http:
      paths:
      - path: /chesssocket
        pathType: Prefix
        backend:
          service:
            name: chess-service
            port:
              number: 4000
      - path: /simplechatsocket
        pathType: Prefix
        backend:
          service:
            name: simple-chat-service
            port:
              number: 4000
      - path: /api/simplechat
        pathType: Prefix
        backend:
          service:
            name: simple-chat-service
            port:
              number: 4000
      - path: /portfolio
        pathType: Prefix
        backend:
          service:
            name: portfolio-service
            port:
              number: 3000
  - host: chess.elixirapi.me
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: chess-frontend-service
              port:
                number: 8080
  - host: chat.elixirapi.me
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: simple-chat-frontend-service
              port:
                number: 3000
  - host: issueboard.elixirapi.me
    http:
      paths:
        - path: /graphql/
          pathType: Exact
          backend:
            service:
              name: issueboard-service
              port:
                name: backend-svc
        - path: /access_token/
          pathType: Exact
          backend:
            service:
              name: issueboard-service
              port:
                name: backend-svc
